ejercicio14/password.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passwordapi
  labels:
    app: passwordapi
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: passwordapi
  template:
    metadata:
      labels:
        app: passwordapi
    spec:
      containers:
      - name: passwordapi
        image: nicopaez/password-api:2.0.1
