ejercicio14/password-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: passwordapi-svc
spec:
  selector:
    app: passwordapi 
  ports:
    - port: 3000
      name: passwordapi-svc
