ejercicio14/pingapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingapp-svc
spec:
  selector:
    app: pingapp 
  ports:
    - port: 4567
      name: pingapp-svc
